--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -60,11 +60,11 @@
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
         </div>
-        <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
-            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
-                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="activities"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></h:link></li>
+        <div class="left-nav-wrap  uk-hidden@xl ">
+            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-small-top">
+                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="60" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="activities"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="60" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="60" alt=""/></h:link></li>
             </ul>
         </div>
     </ui:define>
@@ -135,44 +135,67 @@
                             #{tareasProgresoControlador.llenaTareas(actividades.id)}
                             <li class="uk-margin-medium-left">
                                 <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
-                                    <div>
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
-                                            <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="#{tareasProgresoControlador.tareaResuetasModeloLista[0].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total}"/></div>
+                                    <div class="imagen-flexible">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
+                                       <div class="contenedor-barra">
+                                           <span>0%</span>
+                                           <progress class="uk-progress color1" value="#{tareasProgresoControlador.tareaResuetasModeloLista[0].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total}"/>
+                                           <span>100%</span>
+                                       </div>
+                                    </div>
+                                    <div class="imagen-flexible">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[1].tarea}; pos: right "  />
+                                        <div class="contenedor-barra">
+                                            <span>0%</span>
+                                            <progress class="uk-progress color2" value="#{tareasProgresoControlador.tareaResuetasModeloLista[1].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total}"/>
+                                            <span>100%</span>
                                         </div>
                                     </div>
-                                    <div>
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[1].tarea}; pos: right "  />
-                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="#{tareasProgresoControlador.tareaResuetasModeloLista[1].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total}"/></div>
+
+                                    <div class="imagen-flexible">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[2].tarea}; pos: right "  />
+                                        <div class="contenedor-barra">
+                                            <span>0%</span>
+                                            <progress class="uk-progress color3" value="#{tareasProgresoControlador.tareaResuetasModeloLista[2].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total}"/>
+                                            <span>100%</span>
                                         </div>
                                     </div>
-                                    <div>
-                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[2].tarea}; pos: right "  />
-                                            <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="#{tareasProgresoControlador.tareaResuetasModeloLista[2].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total}"/></div>
-                                        </div>
-                                    </div>
+
                                 </h:panelGroup>
                                 <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
+                                        <div class="imagen-flexible">
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[3].tarea}; pos: right "/>
-                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="#{tareasProgresoControlador.tareaResuetasModeloLista[3].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total}"/></div>
+                                            <div class="contenedor-barra">
+                                                <span>0%</span>
+                                                <progress class="uk-progress color4" value="#{tareasProgresoControlador.tareaResuetasModeloLista[3].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total}"/>
+                                                <span>100%</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                        <div class="imagen-flexible">
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[4].tarea}; pos: right "/>
-                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[4].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total}"/></div>
+                                            <div class="contenedor-barra">
+                                                <span>0%</span>
+                                                <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[4].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total}"/>
+                                                <span>100%</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="fondo-comic6 " style="border: 6px solid white; padding: 20px 0;">
-                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+
+                                        <div class="imagen-flexible">
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[5].tarea}; pos: right "/>
-                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[5].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total}"/></div>
+                                            <div class="contenedor-barra">
+                                                <span>0%</span>
+                                                <progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[5].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total}"/>
+                                                <span>100%</span>
+                                            </div>
                                         </div>
+
                                     </div>
+
                                 </h:panelGroup>
                             </li>
                         </ui:repeat>
