Cuando se envia la respuesta de gramatica ahora manda una notificacion

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -292,6 +292,7 @@
                 if (data.status === 'success') {
                     data.source.previousElementSibling.previousElementSibling.querySelector('.uk-sortable').removeAttribute('uk-sortable');
                     data.source.disabled = true;
+                    UIkit.notification("Respuesta Enviada correctamente", {pos: 'top-right'})
                 }
             }
 
