Properties, mapas mentales

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -104,7 +104,7 @@
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-body">
-                                    <div class="uk-text-center mensaje1"><span class="mensaje1-1">Please watch the<br/>full video!</span></div>
+                                    <div class="uk-text-center mensaje1"><span class="mensaje1-1">#{alumno['title.description.please.watch.the']}<br/>#{alumno['title.description.full.video']}</span></div>
                                 </div>
                                 <div  class="uk-card-footer">
                                     <h:form>
