--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -86,32 +86,32 @@
                 <div class="">
                     <div class="uk-position-relative caja-1">
                         <div class="uk-position-absolute titulo-mapa-15">
-                            <p class="parrafo-mapa-15">Definition: <br/>Sentence: <br/>Part of Speech:</p>
+                            <p class="parrafo-mapa-15">#{alumno['map15.title.definition']}<br/>#{alumno['map15.title.sentence']} <br/>#{alumno['map15.title.part']}</p>
                         </div>
                     </div>
                     <div class="parrafo-mapa-15 uk-position-relative subtitulo-15 caja-2 uk-visible@m">
                             <span class="uk-position-absolute subtitulo-15 uk-display-inline-block">
-                                Picture:
+                                #{alumno['map15.title.picture']}
                             </span>
                     </div>
                     <div class="parrafo-mapa-15 uk-position-absolute caja-4 uk-visible@m">
                             <span class="subtitulo-15 uk-display-inline-block">
-                                Vocabulary
+                                #{alumno['map15.title.vocabulary']}
                             </span>
                     </div>
                     <div class="parrafo-mapa-15 uk-position-absolute caja-5 uk-visible@m">
                             <span class="subtitulo-15 uk-display-inline-block">
-                                Study
+                                #{alumno['map15.title.study']}
                             </span>
                     </div>
 
-                    <h3 class="parrafo-mapa-15 uk-hidden@m uk-text-center">Vocabulary Study</h3>
+                    <h3 class="parrafo-mapa-15 uk-hidden@m uk-text-center">#{alumno['map15.title.vocabulary.study']}</h3>
 
                     <div class="uk-position-relative caja-3">
                         <form action="" class="uk-form-stacked">
                             <div class="planet-1 orientacion letras ">
                                 <div class="uk-form-stacked posicion-planeta">
-                                    <label class="uk-form-label" for="form-stacked-text">Suffix:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.suffix']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="planet-3 orientacion letras">
                                 <div class="uk-form-stacked posicion-planeta">
-                                    <label class="uk-form-label" for="form-stacked-text">Root:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.root']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
@@ -135,7 +135,7 @@
                             </div>
                             <div class="planet-4 orientacion letras">
                                 <div class="uk-form-stacked posicion-planeta">
-                                    <label class="uk-form-label" for="form-stacked-text">Context:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.context']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
@@ -151,11 +151,11 @@
                             </div>
                             <div class="planet-6 orientacion letras">
                                 <div class=" posicion-planeta">
-                                    <label class="uk-form-label" for="form-stacked-text">Synonyms:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.synonyms']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
-                                    <label class="uk-form-label" for="form-stacked-text">Antonyms:</label>
+                                    <label class="uk-form-label" for="form-stacked-text">#{alumno['map15.title.antonyms']}</label>
                                     <div class="uk-form-controls">
                                         <input class="uk-input" id="form-stacked-text" type="text"/>
                                     </div>
