--- a/tecolotl-web/src/main/webapp/alumno/mindmap/16.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/16.xhtml
@@ -17,9 +17,8 @@
                     <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
                         <ul >
                             <!--<li class="uk-active"><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></a></li>-->
-                            <li><a href="#">Perfil</a></li>
-                            <li><a href="#">Chat</a></li>
-                            <li><a href="#">Cerrar Sesion</a></li>
+                            <li><a href="#" class="uk-text-capitalize">#{alumno['profile']}</a></li>
+                            <li><a href="#" class="uk-text-capitalize">#{etiqueta['close.sesion']}</a></li>
                         </ul>
                     </div>
                     <!-- /user dropdown -->
