--- a/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
@@ -84,7 +84,7 @@
             <div data-uk-filter="target: .js-filter">
                 <ul class="uk-subnav nav-default-profesor uk-subnav-alumno uk-margin-medium-top">
                     <li class="uk-active" data-uk-filter-control=""><a href="#">Show All</a></li>
-                    <li data-uk-filter-control=".A1" ><a href="#">Level A1</a></li>
+                    <li data-uk-filter-control=".A1" ><a href="#">#{alumno['dashboard']}</a></li>
                     <li data-uk-filter-control=".A1-A2" ><a href="#">Level A1-A2</a></li>
                     <li data-uk-filter-control=".A2"><a href="#">Level A2</a></li>
                     <li data-uk-filter-control=".B1"><a href="#">Level B1</a></li>
