--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -187,7 +187,7 @@
                             </div>
                             <div>
                                 <h:commandButton id="boton-enviar-mapa-mental" 
-                                                 value="Send" 
+                                                 value="#{boton['submit']}"
                                                  rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                  action="#{mapaMentalControlador.respondeMapaMental}"/>
                             </div>
