--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -87,7 +87,7 @@
         <div class="uk-section">
             <div class="uk-container margen-superior uk-position-relative">
                 <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                    <span>#{alumno['map2.title.answered']}</span>
                 </h:panelGroup>
                 <div class="uk-child-width-1-2@m uk-margin-remove uk-visible@m" uk-grid="">
                     <div class="cuadro-padre1">
@@ -176,7 +176,7 @@
                                     <h:message for="diezd" styleClass=""/>
                                 </div>
                                 <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                                 value="Send"
+                                                 value="#{boton['submit']}"
                                                  rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                  action="#{mapaMentalControlador.respondeMapaMental}"/>
                             </div>
@@ -190,7 +190,7 @@
                             <div class="img-who">
                                 <h:graphicImage library="img" name="mounstro/who.svg" styleClass=""/>
                             </div>
-                            <h2 class="uk-display-inline-block uk-position-absolute titulo-mapa-12">Sequencing Timeline</h2>
+                            <h2 class="uk-display-inline-block uk-position-absolute titulo-mapa-12">#{alumno['map12.title.sequencing']}</h2>
                         </div >
                         <div class="uk-width-1-1@s cuadro-hijo4 ">
                             <div class="img-whom">
@@ -210,7 +210,7 @@
                             <div class="img-who">
                                 <h:graphicImage library="img" name="mounstro/who.svg" styleClass=""/>
                             </div>
-                            <h2 class="uk-display-inline-block uk-position-absolute titulo-mapa-12">Sequencing Timeline</h2>
+                            <h2 class="uk-display-inline-block uk-position-absolute titulo-mapa-12">#{alumno['map12.title.sequencing']}</h2>
                         </div >
                         <div class="uk-width-1-1@s cuadro-hijo4 ">
                             <div class="img-whom">
