--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -86,7 +86,7 @@
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-13 uk-position-relative" >
                 <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                    <span>#{alumno['map2.title.answered']}</span>
                 </h:panelGroup>
                 <h:graphicImage library="img" name="/mounstro/who.svg" styleClass="catarina-13"/>
                 <h:form id="formulario-mapamental" styleClass="uk-grid contenedor-formularios uk-visible@m" pt:uk-grid="">
@@ -371,7 +371,7 @@
                         </div>
                     </div>
                     <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                     value="Send"
+                                     value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"/>
                 </h:form>
