--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -88,7 +88,7 @@
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-14">
                 <div class="titulo-14">
-                    <h3>Main idea and details organized</h3>
+                    <h3>#{alumno['map14.title.main']}</h3>
                 </div>
                 <div class="arbol uk-position-relative uk-visible@m">
                     <h:form id="formulario--mapamental">
@@ -129,7 +129,7 @@
                             <h:message for="cuatro" styleClass=""/>
                         </div>
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
-                                         value="Send"
+                                         value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"/>
                     </h:form>
@@ -173,7 +173,7 @@
                             <h:message for="cuatrom" styleClass=""/>
                         </div>
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                         value="Send"
+                                         value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"/>
                     </h:form>
