--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -84,11 +84,11 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-efecto.css"/>
         <div class="uk-section margen-superior">
-            <h1 class="uk-text-center titulo-mapa-2">Blank cause and effect Diagram</h1>
+            <h1 class="uk-text-center titulo-mapa-2">#{alumno['map2.title.description']}</h1>
 
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
                 <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                    <span>#{alumno['map2.title.answered']}</span>
                 </h:panelGroup>
                 <div class="imagen-pez uk-margin-auto">
                     <h:graphicImage library="img" name="/alumno/pescado.svg"/>
@@ -131,7 +131,7 @@
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-5" styleClass=""/>
                         <h:commandButton id="boton-enviar-mapa-mental-escritorio"
-                                     value="Send"
+                                     value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"/>
                     </div>
@@ -174,7 +174,7 @@
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-movil5" styleClass=""/>
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                     value="Send"
+                                     value="#{boton['submit']}"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"/>
                     </div>
