--- a/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
@@ -87,13 +87,13 @@
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
                 <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                    <span>#{alumno['map2.title.answered']}</span>
                 </h:panelGroup>
                 <h:form id="formulario-mapa-mental">
-                    <h3 class="titulo-mapa-5">Compare &amp; Contrast</h3>
+                    <h3 class="titulo-mapa-5">#{alumno['map5.title.compare']}</h3>
                     <div class="contenido-5"></div>
                     <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
-                        <h3 class="">How the same</h3>
+                        <h3 class="">#{alumno['map5.title.description.how']}</h3>
                     </div>
                     <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
                         <div class="nube-5">
@@ -151,7 +151,7 @@
                         </div>
                         <div class="nave-5-2">
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                         value="Send"
+                                         value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"/>
                         </div>
