--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -87,9 +87,9 @@
         <div class="uk-section margen-superior">
             <div class="uk-container fondo-idea uk-position-relative margen-idea  ">
                 <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                    <span>#{alumno['map2.title.answered']}</span>
                 </h:panelGroup>
-                <p class="uk-position-absolute titulo-mapa-idea">Main idea:</p>
+                <p class="uk-position-absolute titulo-mapa-idea">#{alumno['map9.title.main']}</p>
                 <div class="uk-margin-small-top">
                     <h:graphicImage library="img" name="alumno/pop-art/mensaje11.svg" styleClass="uk-display-block imagen-ard"/>
                 </div>
@@ -156,7 +156,7 @@
                             </div>
                         </div>
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
-                                         value="Send"
+                                         value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"/>
                     </div>
