navegacion y nueva vista transcript

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
-            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-small-top">
+            <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" ><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right" class="uk-active"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="60" alt=""/></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="60" alt=""/></h:link></li>
